<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:weightSum="3"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:orientation="horizontal"
        android:background="@color/headerColor"
        android:gravity="center|left"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            android:layout_marginLeft="20dp"
            android:id="@+id/imgBack"
            />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:src="@drawable/logo" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.7"
        android:scrollbars="none"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.7"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/cardMargin"
            android:layout_marginRight="@dimen/cardMargin"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_contact"
                    android:id="@+id/txtContactDetails"
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/txt_email"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="16sp"
                    app:met_baseColor="@color/hintColor"
                    app:met_floatingLabel="normal"
                    app:met_primaryColor="@color/colorMain"
                    app:met_textColorHint="@color/hintColor"
                    app:met_typeface="regularfont.otf" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="80dp"
                        android:hint="@string/txt_phone"
                        android:inputType="number"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="16sp"
                        android:maxLength="10"
                        app:met_baseColor="@color/hintColor"
                        app:met_floatingLabel="normal"
                        app:met_primaryColor="@color/colorMain"
                        app:met_textColorHint="@color/hintColor"
                        app:met_typeface="regularfont.otf" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtSendOTP"
                        android:text="Send OTP"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="20dp"
                        android:textColor="@android:color/black"

                        />

                </RelativeLayout>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/txt_otp"
                    android:inputType="number"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="16sp"
                    android:maxLength="6"
                    app:met_baseColor="@color/hintColor"
                    app:met_floatingLabel="normal"
                    app:met_primaryColor="@color/colorMain"
                    app:met_textColorHint="@color/hintColor"
                    app:met_typeface="regularfont.otf" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_financial"
                    android:id="@+id/txtFinancial"
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@android:color/black"
                    />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edGST"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:inputType="text"
                    android:hint="@string/txt_gst"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="16sp"
                    app:met_baseColor="@color/hintColor"
                    app:met_floatingLabel="normal"
                    app:met_primaryColor="@color/colorMain"
                    app:met_textColorHint="@color/hintColor"
                    app:met_typeface="regularfont.otf" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edVat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:inputType="text"
                    android:hint="@string/txt_vat"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="16sp"
                    app:met_baseColor="@color/hintColor"
                    app:met_floatingLabel="normal"
                    app:met_primaryColor="@color/colorMain"
                    app:met_textColorHint="@color/hintColor"
                    app:met_typeface="regularfont.otf" />

                <com.dx.dxloadingbutton.lib.LoadingButton
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textColor="@android:color/white"
                    android:id="@+id/btnProceed"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    app:lb_resetAfterFailed="true"
                    app:lb_btnText="@string/txt_next"
                    app:lb_btnColor="@color/colorMain"
                    app:lb_btnRippleColor="@android:color/white"
                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
</LinearLayout>