<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:weightSum="3"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:orientation="horizontal"
        android:background="@color/headerColor"
        android:gravity="center|left"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            android:layout_marginLeft="20dp"
            android:id="@+id/imgBack"
            />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:src="@drawable/logo" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.7"
        android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.75"
        android:orientation="vertical"
        >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/cardMargin"
        android:layout_marginRight="@dimen/cardMargin"
        android:layout_marginBottom="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_signup_text"
                android:id="@+id/txtSignup"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                />
            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spiUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_multiline="false"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                app:ms_dropDownHintView="@layout/dropdown_hint"
                app:ms_hintView="@layout/hint_layout"
                app:ms_hint="Select User Type"
                app:ms_enableFloatingLabel="false"
                app:ms_enableErrorLabel="false"
                app:ms_floatingLabelText="User Type"
                app:ms_baseColor="@color/colorMain"
                app:ms_highlightColor="@color/colorMain"
                app:ms_errorColor="@color/colorMain"
                app:ms_typeface="regularfont.otf"
                app:ms_thickness="0.5dp"
                android:layout_marginBottom="5dp"
                app:ms_hintColor="@android:color/black"
                app:ms_arrowColor="@color/colorMain"
                app:ms_arrowSize="16dp"
                app:ms_alignLabels="false"
                app:ms_floatingLabelColor="@color/colorMain"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edCompanyName"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:hint="@string/txt_company_name"
                android:inputType="text"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                app:met_baseColor="@color/hintColor"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorMain"
                app:met_textColorHint="@color/hintColor"
                app:met_typeface="regularfont.otf" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edCompanyNameForCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:hint="Company Name (Optional)"
                android:inputType="text"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                app:met_baseColor="@color/hintColor"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorMain"
                app:met_textColorHint="@color/hintColor"
                app:met_typeface="regularfont.otf"
                android:visibility="gone"
                />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edFirstName"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:hint="@string/txt_first"
                android:inputType="text"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                app:met_baseColor="@color/hintColor"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorMain"
                app:met_textColorHint="@color/hintColor"
                app:met_typeface="regularfont.otf" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:layout_marginRight="15dp"
                android:hint="@string/txt_last"
                android:inputType="text"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                app:met_baseColor="@color/hintColor"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorMain"
                app:met_textColorHint="@color/hintColor"
                app:met_typeface="regularfont.otf" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:hint="@string/txt_password"
                android:visibility="gone"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                app:met_baseColor="@color/hintColor"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorMain"
                app:met_textColorHint="@color/hintColor"
                app:met_typeface="regularfont.otf" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/upload"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:id="@+id/imgUpload"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtUpload"
                android:text="Upload Logo"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="@color/colorMain"
                android:layout_marginTop="10dp"
                />


            <com.dx.dxloadingbutton.lib.LoadingButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@android:color/white"
                android:id="@+id/btnProceed"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                app:lb_resetAfterFailed="true"
                app:lb_btnText="@string/txt_next"
                android:visibility="gone"
                app:lb_btnColor="@color/colorMain"
                app:lb_btnRippleColor="@android:color/white"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
</LinearLayout>